# tmelandscape

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
adr/: index.html
adr/0001-package-name/: index.html
adr/0002-uv-and-pyproject/: index.html
adr/0003-zarr-as-ensemble-store/: index.html
adr/0004-mcp-from-day-one/: index.html
adr/0005-no-msm-in-v1/: index.html
adr/0006-normalize-as-pipeline-step/: index.html
adr/0007-two-stage-leiden-ward-clustering/: index.html
adr/0008-dependency-pin-policy/: index.html
adr/0009-no-hardcoded-statistics-panel/: index.html
adr/0010-cluster-count-auto-selection/: index.html
api/: index.html
concepts/cluster/: index.html
concepts/embedding/: index.html
concepts/normalize/: index.html
concepts/sampling/: index.html
concepts/summarize/: index.html
concepts/viz/: index.html
development/HANDOFF/: index.html
development/ROADMAP/: index.html
development/STATUS/: index.html
docs/: getting-started.md  index.md
docs/adr/: 0001-package-name.md  0002-uv-and-pyproject.md  0003-zarr-as-ensemble-store.md  0004-mcp-from-day-one.md  0005-no-msm-in-v1.md  0006-normalize-as-pipeline-step.md  0007-two-stage-leiden-ward-clustering.md  0008-dependency-pin-policy.md  0009-no-hardcoded-statistics-panel.md  0010-cluster-count-auto-selection.md  README.md
docs/api/: index.md
docs/concepts/: cluster.md  embedding.md  normalize.md  sampling.md  summarize.md  viz.md
docs/development/: HANDOFF.md  ROADMAP.md  STATUS.md
docs/development/decisions/: 2026-05-14-bh-fdr-hand-rolled.md  2026-05-14-cluster-count-max-default.md  2026-05-14-decision-log-system.md  2026-05-14-lcss-1-schematic-in-scope.md  2026-05-14-no-pypi-ever.md  2026-05-14-no-pypi-plan.md  2026-05-14-phase-5-session.md  2026-05-14-phase-6-session.md  2026-05-14-seaborn-mypy-override.md  2026-05-14-terminal-cluster-label-mode.md  2026-05-14-v0-7-1-session.md  2026-05-14-viz-lcss3-vector-field-semantics.md  2026-05-14-viz-time-umap-uses-window-bounds.md  2026-05-14-viz-trajectories-deviations.md  2026-05-14-viz-umap-result-param-rename.md  2026-05-14-wss-elbow-algorithm-options.md  2026-05-14-wss-elbow-option-5-accepted.md  INDEX.md  README.md  TEMPLATE.md
docs/mcp/: index.md
docs/tutorials/: index.md
getting-started/: index.html
mcp/: index.html
reference/: README.md
scripts/: fetch_example_data.py
search/: search_index.json
src/tmelandscape/: __init__.py
src/tmelandscape/cli/: __init__.py  cluster.py  cluster_strategies.py  embed.py  embed_strategies.py  main.py  normalize.py  normalize_strategies.py  sample.py  statistics.py  summarize.py  viz_figures.py
src/tmelandscape/cluster/: __init__.py  alternatives.py  labels.py  leiden.py  leiden_ward.py  meta.py  selection.py
src/tmelandscape/config/: cluster.py  embedding.py  normalize.py  summarize.py  sweep.py
src/tmelandscape/embedding/: __init__.py  alternatives.py  sliding_window.py
src/tmelandscape/landscape/: __init__.py
src/tmelandscape/mcp/: __init__.py  server.py  tools.py
src/tmelandscape/normalize/: __init__.py  alternatives.py  feature_filter.py  within_timestep.py
src/tmelandscape/sampling/: __init__.py  alternatives.py  lhs.py  manifest.py  tissue_init.py
src/tmelandscape/summarize/: __init__.py  aggregate.py  registry.py  schema.py  spatialtissuepy_driver.py
src/tmelandscape/utils/: __init__.py  logging.py
src/tmelandscape/viz/: __init__.py  dynamics.py  embedding.py  model_schematic.py  trajectories.py
tasks/: 00-reference-audit.md  02-sampling-implementation.md  03-summarize-implementation.md  04-normalize-implementation.md  05-embedding-implementation.md  06-clustering-implementation.md  07-visualisation-implementation.md  README.md
tests/: conftest.py
tests/data/example_physicell/: README.md
tests/data/synthetic_physicell/: build.py
tests/data/synthetic_physicell/sim_000000_ic_000/: output00000000_cells_physicell.mat  output00000001_cells_physicell.mat  output00000002.xml  output00000002_cells_physicell.mat
tests/data/synthetic_physicell/sim_000001_ic_000/: PhysiCell_settings.xml  output00000000.xml  output00000000_cells_physicell.mat  output00000001_cells_physicell.mat  output00000002_cells_physicell.mat
tests/data/synthetic_physicell/sim_000002_ic_000/: output00000000_cells_physicell.mat  output00000001.xml  output00000001_cells_physicell.mat  output00000002_cells_physicell.mat
tests/integration/: test_clustering_end_to_end.py  test_embedding_end_to_end.py  test_normalize_end_to_end.py  test_sample_end_to_end.py  test_summarize_end_to_end.py  test_visualisation_end_to_end.py
tests/real_data/: test_real_ensemble.py
tests/unit/: test_cluster_alternatives.py  test_cluster_config.py  test_cluster_ensemble.py  test_cluster_leiden_ward.py  test_cluster_selection.py  test_config_sweep.py  test_embedding_alternatives.py  test_embedding_config.py  test_embedding_ensemble.py  test_embedding_sliding_window.py  test_landscape_join.py  test_normalize_alternatives.py  test_normalize_config.py  test_normalize_ensemble.py  test_normalize_within_timestep.py  test_sampling_alternatives.py  test_sampling_lhs.py  test_sampling_manifest.py  test_sampling_tissue_init.py  test_smoke.py  test_summarize_aggregate.py  test_summarize_config.py  test_summarize_driver.py  test_summarize_registry.py  test_viz_dynamics.py  test_viz_embedding.py  test_viz_model_schematic.py  test_viz_trajectories.py
tutorials/: index.html
